--- a/app/src/main/res/layout/activity_management.xml
+++ b/app/src/main/res/layout/activity_management.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/management_dialog_actionbar_background_color"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        app:popupTheme="@style/AppTheme.PopupOverlay">
+        android:theme="@style/PopupActivityTheme.AppBarOverlay"
+        app:popupTheme="@style/PopupActivityTheme.PopupOverlay">
 
         <TextView
             android:id="@+id/management_actionbar_title"
