--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
 
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
     <!-- Views -->
     <dimen name="button_padding_top_bottom">5dp</dimen>
     <dimen name="button_padding_left_right">15dp</dimen>
@@ -141,5 +145,9 @@
     <dimen name="management_item_height">50dp</dimen>
     <dimen name="management_item_padding">13dp</dimen>
     <dimen name="management_item_name_text_size">20dp</dimen>
+
+    <!-- Detailed worker -->
+    <dimen name="detailed_worker_avatar_width_height">45dp</dimen>
+    <dimen name="detailed_worker_actionbar_title_text_size">16dp</dimen>
 
 </resources>
