--- a/app/src/main/res/layout/tab.xml
+++ b/app/src/main/res/layout/tab.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/tab_vg_bg_selector">
 
     <TextView
-        android:id="@+id/ov_tab_title"
+        android:id="@+id/tab_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18dp"
