[Preload] Add PreloadActivity
1. Add PreloadActivity to load working data from server before displaying MainActivity
2. RestfulAPI for connecting with server

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,37 +1,35 @@
 <resources>
 
-    <style name="AppTheme" parent="@style/BaseAppTheme">
+    <!-- Base application theme. -->
+    <style name="BaseAppTheme" parent="Theme.AppCompat.Light">
     </style>
 
-    <!-- Base application theme. -->
-    <style name="BaseAppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Main application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Action bar color -->
         <item name="colorPrimary">@color/action_bar_primary_color</item>
         <!-- Status bar color -->
         <item name="colorPrimaryDark">@color/action_bar_primary_color</item>
-
-        <item name="drawerArrowStyle">@style/BaseAppTheme.DrawerArrowStyle</item>
+        <item name="drawerArrowStyle">@style/AppTheme.DrawerArrowStyle</item>
         <item name="android:windowBackground">@color/main_window_background_color</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:dropDownListViewStyle">@style/CommonSpinnerStyle</item>
     </style>
-
-    <style name="BaseAppThemeOverlay.Toolbar" parent="ThemeOverlay.AppCompat.ActionBar">
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar" >
         <!-- Customize color of navigation drawer icon and back arrow -->
         <item name="colorControlNormal">@android:color/white</item>
     </style>
-
-    <style name="BaseAppTheme.Toolbar.Title" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.Toolbar.Title" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textColor">@android:color/white</item>
     </style>
-
-    <style name="BaseAppTheme.DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+    <style name="AppTheme.DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@android:color/white</item>
     </style>
 
+
     <style name="AppDialogTheme" parent="Theme.AppCompat.Light.DialogWhenLarge">
     </style>
-
     <style name="AppDialogTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -47,11 +45,9 @@
         <item name="android:windowBackground">@color/main_window_background_color</item>
         <item name="android:dropDownListViewStyle">@style/CommonSpinnerStyle</item>
     </style>
-
     <style name="PopupActivityTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar" >
         <item name="colorControlNormal">@color/action_bar_primary_color</item>
     </style>
-
     <style name="PopupActivityTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
@@ -60,18 +56,16 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/task_case_text_color</item>
     </style>
-
     <style name="TaskCaseTextStyle.TaskCaseInformationTitle">
         <item name="android:textSize">@dimen/task_case_information_title_text_size</item>
     </style>
-
     <style name="TaskCaseTextStyle.TaskItemTitle">
         <item name="android:textSize">@dimen/task_card_title_text_size</item>
     </style>
-
     <style name="TaskCaseTextStyle.TaskItemContent">
         <item name="android:textSize">@dimen/task_card_content_text_size</item>
     </style>
+
 
     <style name="TaskItemTextStyle">
         <item name="android:layout_width">match_parent</item>
@@ -90,19 +84,18 @@
         <item name="android:dividerHeight">1dp</item>
     </style>
 
+
     <style name="DrawerItemStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/drawer_item_height</item>
         <item name="android:paddingLeft">@dimen/drawer_item_padding_left_right</item>
         <item name="android:paddingRight">@dimen/drawer_item_padding_left_right</item>
     </style>
-
     <style name="DrawerSettingItemStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/drawer_item_setting_height</item>
         <item name="android:background">@color/drawer_setting_background_color</item>
     </style>
-
     <style name="DrawerItemTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -111,7 +104,6 @@
         <item name="android:textColor">@drawable/selector_drawer_item_text_color</item>
         <item name="android:textSize">@dimen/drawer_item_text_size</item>
     </style>
-
     <style name="DrawerItemInfoCountTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -124,7 +116,6 @@
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:background">@drawable/drawer_item_number_background</item>
     </style>
-
     <style name="DrawerSubItemTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -141,6 +132,7 @@
         <item name="android:textSize">@dimen/add_case_left_part_title_text_size</item>
     </style>
 
+
     <style name="ButtonStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -152,14 +144,13 @@
         <item name="android:textSize">@dimen/button_text_size</item>
         <item name="android:textStyle">bold</item>
     </style>
-
     <style name="ButtonStyle.Blue">
         <item name="android:background">@drawable/blue_button_background</item>
     </style>
-
     <style name="ButtonStyle.Green">
         <item name="android:background">@drawable/green_button_background</item>
     </style>
+
 
     <style name="TitleEditText">
         <item name="android:layout_width">wrap_content</item>
@@ -167,10 +158,8 @@
         <item name="android:textColor">@color/title_edit_text_text_color</item>
         <item name="android:textSize">@dimen/title_edit_text_title_text_size</item>
     </style>
-
     <style name="TitleEditText.Title">
     </style>
-
     <style name="TitleEditText.Content">
         <item name="android:padding">@dimen/title_edit_text_content_padding</item>
         <item name="android:textSize">@dimen/title_edit_text_content_text_size</item>
