--- a/app/src/main/res/layout/fragment_assign_task.xml
+++ b/app/src/main/res/layout/fragment_assign_task.xml
@@ -1,71 +1,87 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/task_case_view"
-        android:layout_width="0dp"
+    <include
+        layout="@layout/circular_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
+    <LinearLayout
+        android:id="@+id/main_view"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="@integer/task_container_weight"
-        android:scrollbars="vertical"
-        android:background="@drawable/common_block_background"/>
+        android:orientation="horizontal"
+        android:visibility="gone">
 
-    <View
-        android:layout_width="@dimen/assign_task_divider_width_height"
-        android:layout_height="match_parent"
-        android:background="@color/main_window_divider_color" />
-
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="@integer/worker_container_weight">
-
-        <Spinner
-            android:id="@+id/factory_spinner"
-            style="@style/CommonSpinnerStyle"
-            android:layout_centerHorizontal="true"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/task_case_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="@integer/task_container_weight"
+            android:scrollbars="vertical"
+            android:background="@drawable/common_block_background"/>
 
         <View
-            android:id="@+id/worker_container_divider"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/assign_task_divider_width_height"
-            android:layout_below="@+id/factory_spinner"
+            android:layout_width="@dimen/assign_task_divider_width_height"
+            android:layout_height="match_parent"
             android:background="@color/main_window_divider_color" />
 
-        <LinearLayout
-            android:id="@+id/worker_container"
-            android:layout_width="match_parent"
+        <RelativeLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_below="@+id/worker_container_divider"
-            android:paddingLeft="@dimen/worker_container_padding_left_right"
-            android:paddingRight="@dimen/worker_container_padding_left_right"
-            android:orientation="vertical"
-            android:background="@drawable/common_block_background"
-            android:gravity="center_horizontal">
+            android:layout_weight="@integer/worker_container_weight">
 
-            <Button
-                android:id="@+id/worker_action_button"
-                android:layout_width="wrap_content"
-                android:layout_height="39dp"
-                android:layout_gravity="top|left"
-                android:text="@string/worker_action_start" />
+            <Spinner
+                android:id="@+id/factory_spinner"
+                style="@style/CommonSpinnerStyle"
+                android:layout_centerHorizontal="true"/>
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/worker_pager"
+            <View
+                android:id="@+id/worker_container_divider"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"/>
+                android:layout_height="@dimen/assign_task_divider_width_height"
+                android:layout_below="@+id/factory_spinner"
+                android:background="@color/main_window_divider_color" />
 
             <LinearLayout
-                android:id="@+id/worker_pager_indicator_container"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/worker_pager_indicator_container_padding"
-                android:orientation="horizontal"/>
+                android:id="@+id/worker_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/worker_container_divider"
+                android:paddingLeft="@dimen/worker_container_padding_left_right"
+                android:paddingRight="@dimen/worker_container_padding_left_right"
+                android:orientation="vertical"
+                android:background="@drawable/common_block_background"
+                android:gravity="center_horizontal">
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/worker_action_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="39dp"
+                    android:layout_gravity="top|left"
+                    android:text="@string/worker_action_start" />
 
-    </RelativeLayout>
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/worker_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"/>
 
-</LinearLayout>
+                <LinearLayout
+                    android:id="@+id/worker_pager_indicator_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/worker_pager_indicator_container_padding"
+                    android:orientation="horizontal"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
+
+
