--- a/app/src/main/res/layout/fragment_task_schedule.xml
+++ b/app/src/main/res/layout/fragment_task_schedule.xml
@@ -5,10 +5,60 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/black"
-        android:text="Task schedule"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:padding="@dimen/detailed_worker_task_schedule_current_task_container_padding"
+        android:background="@drawable/common_block_background">
+
+        <TextView
+            android:id="@+id/current_task_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/detailed_worker_current_task_text"
+            android:textSize="@dimen/detailed_worker_current_task_text_size"
+            android:textColor="@color/detailed_worker_current_task_text_color"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"/>
+
+        <TextView
+            android:id="@+id/complete_task_button"
+            style="@style/ButtonStyle.Blue"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:text="@string/detailed_worker_task_schedule_complete_task_button" />
+
+        <TextView
+            android:id="@+id/add_warning_button"
+            style="@style/ButtonStyle.Gray"
+            android:layout_toLeftOf="@+id/complete_task_button"
+            android:layout_alignBottom="@+id/complete_task_button"
+            android:layout_marginRight="@dimen/detailed_worker_task_schedule_current_task_container_button_margin_right"
+            android:text="@string/detailed_worker_task_schedule_add_warning_button" />
+
+        <TextView
+            android:id="@+id/manage_warning_button"
+            style="@style/ButtonStyle.Gray"
+            android:layout_toLeftOf="@+id/add_warning_button"
+            android:layout_alignBottom="@+id/complete_task_button"
+            android:layout_marginRight="@dimen/detailed_worker_task_schedule_current_task_container_button_margin_right"
+            android:text="@string/detailed_worker_task_schedule_manage_warning_button" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/detailed_worker_divider_width"
+        android:background="@color/main_window_divider_color" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:background="@drawable/common_block_background">
+
+
+    </RelativeLayout>
 
 </LinearLayout>
