--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="button_black_text_color">@android:color/black</color>
     <color name="blue_button_background_color">#FF428BCA</color>
     <color name="green_button_background_color">#FF5CB85C</color>
+    <color name="gray_button_background_color">#FFE1E1E1</color>
     <color name="title_edit_text_text_color">#FF4A4A4A</color>
 
     <!-- Common used -->
@@ -106,5 +107,6 @@
     <color name="detailed_worker_actionbar_baseline_color">#FF9B9B9B</color>
     <color name="detailed_worker_acitonbar_name_text_color">#FF4A4A4A</color>
     <color name="detailed_worker_acitonbar_jobtitle_text_color">#FF9B9B9B</color>
+    <color name="detailed_worker_current_task_text_color">#FF696969</color>
 
 </resources>
