--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -150,5 +150,8 @@
     <dimen name="detailed_worker_avatar_width_height">45dp</dimen>
     <dimen name="detailed_worker_actionbar_title_text_size">16dp</dimen>
     <dimen name="detailed_worker_divider_width">5dp</dimen>
+    <dimen name="detailed_worker_current_task_text_size">18dp</dimen>
+    <dimen name="detailed_worker_task_schedule_current_task_container_padding">24dp</dimen>
+    <dimen name="detailed_worker_task_schedule_current_task_container_button_margin_right">15dp</dimen>
 
 </resources>
