--- a/app/src/main/res/layout/fragment_worker_ov_status.xml
+++ b/app/src/main/res/layout/fragment_worker_ov_status.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/status_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
