--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,7 +36,7 @@
     </style>
 
 
-    <style name="PopupActivityTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="PopupActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Action bar color -->
         <item name="colorPrimary">@android:color/white</item>
         <!-- Status bar color -->
