--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -168,4 +168,20 @@
         <item name="android:textSize">@dimen/title_edit_text_content_text_size</item>
     </style>
 
+
+    <style name="DetailedWorkerTaskSchedule">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/detailed_worker_task_schedule_header_text_color</item>
+    </style>
+    <style name="DetailedWorkerTaskSchedule.Header">
+        <item name="android:textColor">@color/detailed_worker_task_schedule_header_text_color</item>
+    </style>
+    <style name="DetailedWorkerTaskSchedule.Item">
+        <item name="android:textColor">@color/detailed_worker_task_schedule_item_text_color</item>
+        <item name="android:textSize">@dimen/detailed_worker_task_schedule_item_text_size</item>
+    </style>
+
 </resources>
