--- a/app/src/main/res/layout/fragment_task_schedule.xml
+++ b/app/src/main/res/layout/fragment_task_schedule.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="@dimen/detailed_worker_task_schedule_current_task_container_padding"
+        android:padding="@dimen/detailed_worker_task_schedule_padding"
         android:background="@drawable/common_block_background">
 
         <TextView
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:text="@string/detailed_worker_current_task_text"
             android:textSize="@dimen/detailed_worker_current_task_text_size"
-            android:textColor="@color/detailed_worker_current_task_text_color"
+            android:textColor="@color/detailed_worker_task_schedule_title_text_color"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"/>
 
@@ -74,8 +74,45 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
+        android:paddingLeft="@dimen/detailed_worker_task_schedule_padding"
+        android:paddingRight="@dimen/detailed_worker_task_schedule_padding"
+        android:paddingTop="@dimen/detailed_worker_task_schedule_padding"
         android:background="@drawable/common_block_background">
 
+        <TextView
+            android:id="@+id/scheduled_task_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/detailed_worker_scheduled_task_text"
+            android:textSize="@dimen/detailed_worker_scheduled_task_text_size"
+            android:textColor="@color/detailed_worker_task_schedule_title_text_color"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"/>
+
+        <TextView
+            android:id="@+id/manage_tasks_button"
+            style="@style/ButtonStyle.Gray"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:text="@string/detailed_worker_task_schedule_manage_tasks_button" />
+
+        <LinearLayout
+            android:id="@+id/scheduled_tasks_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/manage_tasks_button"
+            android:layout_marginTop="@dimen/detailed_worker_task_schedule_scheduled_tasks_container_margin_top"
+            android:layout_marginLeft="@dimen/detailed_worker_task_schedule_scheduled_tasks_container_margin_left"
+            android:layout_marginRight="@dimen/detailed_worker_task_schedule_scheduled_tasks_container_margin_right"
+            android:orientation="vertical">
+
+            <include
+                layout="@layout/detailed_worker_task_schedule_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/detailed_worker_task_schedule_scheduled_tasks_item_index_width"/>
+
+        </LinearLayout>
 
     </RelativeLayout>
 
