--- a/app/src/main/res/drawable/worker_card_background.xml
+++ b/app/src/main/res/drawable/worker_card_background.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/worker_card_background_color" />
-    <stroke
-        android:width="@dimen/worker_card_stroke_width"
-        android:color="@color/worker_card_stroke_color" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?colorControlHighlight">
+
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/worker_card_background_color" />
+            <stroke
+                android:width="@dimen/worker_card_stroke_width"
+                android:color="@color/worker_card_stroke_color" />
+        </shape>
+    </item>
+
+</ripple>
